--- a/3.html
+++ b/3.html
@@ -7,6 +7,7 @@
     <style>
         table{
             width: 100%;
+            height: 400px;
             text-align: center;
         }
         table , td{
@@ -14,7 +15,9 @@
             border: 1px solid;
             border-collapse: collapse;
         }
-  
+        .bold{
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -48,7 +51,7 @@
             <td rowspan="1" colspan="1" class= "bold">R</td>
         </tr>
         <tr>
-            <td>80540934</td>
+            <td>80549061</td>
             <td>John</td>
             <td>70%</td>
             <td>100%</td>
@@ -57,6 +60,31 @@
             <td colspan="4"></td>
             <td>17.6</td>
             <td>18</td>
+        </tr>
+        <tr>
+            <td>80549062</td>
+            <td>Mary</td>
+            <td>10%</td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>6.8</td>
+            <td>100%</td>
+            <td>100%</td>
+            <td>50%</td>
+            <td>16.5</td>
+            <td>16.5</td>
+            <td>17</td>
+        </tr>
+        <tr>
+            <td>80549063</td>
+            <td>Claire</td>
+            <td colspan="4"></td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>10.0</td>
+            <td>10.0</td>
+            <td>10</td>
         </tr>
     </table>
 </body>
